use locations from product/metafields
